# claysys-rag-application

./: README.md
backend/: .env  app.py  pyproject.toml
backend/lib/: claysis.py  llm.py  pdf.py  utils.py  vector.py
backend/utils/: file.py
web/: package-lock.json  package.json
web/app/: page.tsx
web/app/api/insert_doc/: route.ts
web/app/api/query/: route.ts
web/components/: chat-interface.tsx
web/lib/: config.ts
